# Logger

./: .gitignore  .gitmodules  ABOUT.txt  About.txt  README.md  update_software_toolkit.sh
Application/: .gitignore  CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  LoggingSystemConfig.h.in  main.cpp  mock_log_data_generator.cpp  tests.cpp
Tests/Mocks/: logger_simple_mock_MTHD_level_message_stacktrace_dtabs.mock  logger_simple_mock_MTHD_level_message_stacktrace_dtabs_nanos.mock  logger_simple_mock_MTHD_level_message_stacktrace_tabs_nanos_tabw_2.mock  logger_simple_mock_MTHD_level_message_stacktrace_tabs_nanos_tabw_4.mock  logger_simple_mock_MTHD_level_message_stacktrace_tabs_tabw_3.mock  logger_simple_mock_MTHD_level_message_stacktrace_tabs_tabw_5.mock  logger_simple_mock_MTHD_level_message_tabs_nanos_tabw_1.mock  logger_simple_mock_MTHD_level_message_tabs_nanos_tabw_10.mock  logger_simple_mock_MTHD_level_message_tabs_nanos_tabw_11.mock  logger_simple_mock_MTHD_level_message_tabs_nanos_tabw_4.mock  logger_simple_mock_MTHD_level_message_tabs_tabw_3.mock  logger_simple_mock_MTHD_level_tag_message_dtabs.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_dtabs.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_dtabs_nanos.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_tabs_nanos_tabw_1.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_tabs_nanos_tabw_3.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_tabs_nanos_tabw_4.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_tabs_tabw_2.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_tabs_tabw_4.mock  logger_simple_mock_MTHD_level_tag_message_stacktrace_tabs_tabw_7.mock  logger_simple_mock_MTHD_level_tag_message_tabs_nanos_tabw_10.mock  logger_simple_mock_MTHD_level_tag_message_tabs_nanos_tabw_4.mock  logger_simple_mock_MTHD_level_tag_message_tabs_nanos_tabw_6.mock  logger_simple_mock_MTHD_level_tag_message_tabs_nanos_tabw_7.mock  logger_simple_mock_MTHD_level_tag_message_tabs_tabw_5.mock  logger_simple_mock_MTHD_level_tag_message_tabs_tabw_8.mock  logger_simple_mock_MTHD_level_tag_message_tabs_tabw_9.mock  logger_simple_mock_MTHD_message_dtabs.mock  logger_simple_mock_MTHD_message_stacktrace_dtabs.mock  logger_simple_mock_MTHD_message_stacktrace_tabs_nanos_tabw_2.mock  logger_simple_mock_MTHD_message_stacktrace_tabs_nanos_tabw_4.mock  logger_simple_mock_MTHD_message_stacktrace_tabs_tabw_1.mock  logger_simple_mock_MTHD_message_stacktrace_tabs_tabw_10.mock  logger_simple_mock_MTHD_message_stacktrace_tabs_tabw_4.mock  logger_simple_mock_MTHD_message_stacktrace_tabs_tabw_9.mock  logger_simple_mock_MTHD_message_tabs_nanos_tabw_1.mock  logger_simple_mock_MTHD_message_tabs_nanos_tabw_4.mock  logger_simple_mock_MTHD_message_tabs_nanos_tabw_9.mock  logger_simple_mock_MTHD_message_tabs_tabw_11.mock  logger_simple_mock_MTHD_message_tabs_tabw_4.mock  (+18 more)
Tests/Tests/: ExampleLogger.cpp  ExampleLogger.h  MockLogDataGenerator.h  TestCaseAssertLogMethodsUsage.cpp  TestCaseAssertLogMethodsUsage.h  TestCaseAssertLogMethodsUsageData.cpp  TestCaseAssertLogMethodsUsageData.h  TestCaseChainLoggers.cpp  TestCaseChainLoggers.h  TestCaseClearImplementations.cpp  TestCaseClearImplementations.h  TestCaseInitializeDefaultImplementations.cpp  TestCaseInitializeDefaultImplementations.h  TestCaseLoggerSimpleLinesCount.cpp  TestCaseLoggerSimpleLinesCount.h  TestCaseRegisterImplementation.cpp  (+15 more)
(+87 files in other folders)
